--- a/index.html
+++ b/index.html
@@ -48,12 +48,14 @@
       max-width: 960px;
       margin: 50px auto 0;
       padding: 0 20px;
+      text-align: center;
     }
     .summary-card p {
       font-size: clamp(1.45rem, 4.2vw, 2.1rem);
       line-height: 1.55;
       font-weight: 400;
       opacity: 0.95;
+      color: #e0e0ff;
       background: rgba(255,215,0,0.08);
       padding: 36px 44px;
       border-radius: 32px;
@@ -162,13 +164,14 @@
       <h1>PAUL BRISTOW</h1>
       <p class="tagline">Revenue Driver • Team Builder • Results Owner</p>
 
-      <!-- Professional Summary Card -->
+      <!-- NEW: Professional Summary Paragraph -->
       <div class="summary-card">
         <p>
           <strong>REVENUE DRIVER | TEAM BUILDER | RESULTS OWNER</strong>
           Proven executive with a track record of building and scaling high-performance sales organizations from startup to $295M+ in revenue. Expertise in strategic leadership, sales technology integration (Salesforce, Velocify, SaaS), team expansion, and delivering exceptional CAGR and ROS growth. Passionate about renewable energy, global markets, business-to-business sales, and developing top-tier talent.
         </p>
       </div>
+      <!-- End New Paragraph -->
 
       <div class="contact">
         <a href="tel:469-578-0999">469-578-0999</a>
@@ -273,18 +276,11 @@
       <div style="text-align:center; padding:20px;">
         <p style="margin:0;">
           <a href="mailto:PaulMBristow@icloud.com" 
-             style="font-size:clamp(1.3rem, 5.8vw, 2.6rem); 
-                    line-height:1.4;
-                    white-space:nowrap;
-                    display:inline-block;
-                    color:#ffd700;
-                    text-decoration:none;">
+             style="font-size:clamp(1.3rem, 5.8vw, 2.6rem); line-height:1.4; white-space:nowrap; display:inline-block; color:#ffd700; text-decoration:none;">
             PaulMBristow@icloud.com
           </a>
         </p>
-        <p style="font-size:clamp(1.5rem, 6.5vw, 2.1rem); 
-                  margin-top:30px; 
-                  color:#ffd700;">
+        <p style="font-size:clamp(1.5rem, 6.5vw, 2.1rem); margin-top:30px; color:#ffd700;">
           469-578-0999
         </p>
       </div>
